@@ -1,5 +1,5 @@
-# $NetBSD: Makefile,v 1.2 2007/09/09 05:51:59 xtraeme Exp $
+# $NetBSD: Makefile,v 1.3 2007/09/11 21:46:53 xtraeme Exp $
 
-SUBDIR=		it lm nsclpcsio smsc ug
+SUBDIR=		aps it lm nsclpcsio smsc ug
 
 .include <bsd.subdir.mk>
